--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+<a href=" index.html">Home</a>|
+<a href=" about.html">About</a>|
+<a href=" contact/feedback">Contact/Feedback</a>|
+<a href="tours&packages">Tours&Packages</a>|
+<a href="travel tips">Travel Tips</a>|
+  
 
 <title>WK TRAVEL&TOURS - YOUR NEXT ADVENTURE 🌍✨</title>
 <link rel="stylesheet" href="styles.css">
@@ -18,8 +25,7 @@
 <header>
 
 <h1> WK TRAVEL&TOURS✨</h1>
-
-
+  
 </header>
 
 
@@ -27,8 +33,8 @@
 
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
-<p>Here's a picture of a cute cat:</p>
-<img src="https://placekitten.com/200/300" alt="A cute kitten">
+<p>Here's a picture showing the beautiful landscapes of Botswana:</p>
+<img src="https://www.originaltravel.co.uk/travel-blog/showphoto/4115/0">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
