--- a/contact & feedback.html
+++ b/contact & feedback.html
@@ -22,10 +22,10 @@
 <nav>
 
 <a href="index.html">Home</a> |
-
 <a href="about.html">About</a> |
-
-<a href="contact.html">Contact</a>
+<a href="contact&feedback.html">Contact&Feedback</a> |
+<a href="tours&package">Tours&Package</a>|
+<a href="travel tips">Travel Tips</a> | 
 
 </nav>
 
