--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 <a href=" index.html">Home</a>|
 <a href=" about.html">About</a>|
-<a href=" contact/feedback">Contact/Feedback</a>|
+<a href=" contact&feedback">Contact&Feedback</a>|
 <a href="tours&packages">Tours&Packages</a>|
 <a href="travel tips">Travel Tips</a>|
   
