--- a/about.html
+++ b/about.html
@@ -22,10 +22,11 @@
 <nav>
 
 <a href="index.html">Home</a> |
-
 <a href="about.html">About</a> |
+<a href="contact&feedback.html">Contact&Feedback</a> |
+<a href="tours&travel.html">Tours&Travel</a> |
+<a href="travel tips">Travel Tips</a> |
 
-<a href="contact.html">Contact</a>
 
 </nav>
 
