--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <main>
 
-<p>This is a simple webpage hosted on GitHub Pages.</p>
+<p>This is a website aimed at helping you discover the beauty of Botswana🫵🏾.</p>
 
 <p>Here's a picture showing the beautiful landscapes of Botswana:</p>
 <img src="https://www.originaltravel.co.uk/travel-blog/showphoto/4115/0">
