--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
 
 <header>
 
-<h1> WK TRAVEL&TOURS✨</h1>
+<h1> WK TRAVEL&TOURS✨🌍</h1>
   
 </header>
 
 
 <main>
 
-<p>This is a website aimed at helping you discover the beauty of Botswana🫵🏾.</p>
+<p>Exhaustive guide to exploring the breathtaking landscapes, wildlife, and culture of Botswana🫵🏾.
+Our mission is to give you the best travel experiences so you can experience the beauty, culture of our area.
+Our featured destinations include The Makgadikgadi Pans,Tshodilo Hills, Chobe National park......... </p>
+ 
 
 <p>Here's a picture showing the beautiful landscapes of Botswana:</p>
 <img src="https://www.originaltravel.co.uk/travel-blog/showphoto/4115/0">
