--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
 
 <header>
 
-<h1> WK TRAVEL&TOURS✨🌍</h1>
+<h1> WK TRAVEL&TOURS✨🌍</h1> 
+
+  <nav class="navbar">
+    <ul>
+       <li><a href =""Home</a></li>     
+       <li><a href=" about.html">About</a></li>
+       <li><a href=" contact&feedback">Contact&Feedback</a></li>
+       <li><a href="tours&packages">Tours&Packages</a></li>
+       <li><a href="travel tips">Travel Tips</a></li>
+    </ul>
+    
+  </nav>
+
+  <main>
+    <h3> This is the Home page</h3>
+    <p> YOUR DESTINATION AWAITS YOU</p>
+  </main>
   
 </header>
 
