--- a/about.html
+++ b/about.html
@@ -19,16 +19,20 @@
 
 <h1>About Me</h1>
 
+
 <nav>
+  
+<nav class="navbar">
+    <ul>
+       <li><a href ="Home">/a></li>     
+       <li><a href=" about.html">About</a></li>
+       <li><a href=" contact&feedback">Contact&Feedback</a></li>
+       <li><a href="tours&packages">Tours&Packages</a></li>
+       <li><a href="travel tips">Travel Tips</a></li>
+    </ul>
+    
+  </nav>
 
-<a href="index.html">Home</a> |
-<a href="about.html">About</a> |
-<a href="contact&feedback.html">Contact&Feedback</a> |
-<a href="tours&travel.html">Tours&Travel</a> |
-<a href="travel tips">Travel Tips</a> |
-
-
-</nav>
 
 </header>
 <main>
