--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <nav class="navbar">
     <ul>
-       <li><a href ="Home">/a></li>     
+       <li><a href ="index.htm">Home</a></li>     
        <li><a href=" about.html">About</a></li>
        <li><a href=" contact&feedback">Contact&Feedback</a></li>
        <li><a href="tours&packages">Tours&Packages</a></li>
