--- a/contact & feedback.html
+++ b/contact & feedback.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Contact Me</title>
+<title>contact & feedback</title>
 <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -17,7 +17,7 @@
 
 <header>
 
-<h1>Contact Me</h1>
+<h1>contact & feedback</h1>
 
 <nav>
 
