--- a/Travel Tips.html
+++ b/Travel Tips.html
@@ -9,6 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Travel Tips</title>
+<link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -24,9 +25,9 @@
     <ul>
        <li><a href ="index.htm">Home</a></li>     
        <li><a href=" about.html">About</a></li>
-       <li><a href=" contact&feedback">Contact&Feedback</a></li>
-       <li><a href="tours&packages">Tours&Packages</a></li>
-       <li><a href="travel tips">Travel Tips</a></li>
+       <li><a href=" contact&feedback.html">Contact&Feedback</a></li>
+       <li><a href="tours&packages.html">Tours&Packages</a></li>
+       <li><a href="travel tips.html">Travel Tips</a></li>
     </ul>
     
   </nav>
