--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
     <ul>
        <li><a href ="index.htm">Home</a></li>     
        <li><a href=" about.html">About</a></li>
-       <li><a href=" contact&feedback">Contact&Feedback</a></li>
-       <li><a href="tours&packages">Tours&Packages</a></li>
-       <li><a href="travel tips">Travel Tips</a></li>
+       <li><a href=" contact&feedback.html">Contact&Feedback</a></li>
+       <li><a href="tours&packages.html">Tours&Packages</a></li>
+       <li><a href="travel tips.html">Travel Tips</a></li>
     </ul>
     
   </nav>
