--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 
 <title>WK TRAVEL&TOURS - YOUR NEXT ADVENTURE 🌍✨</title>
 <link rel="stylesheet" href="styles.css">
-
+<style>
+  
+   </style>
 </head>
-
-<body>
+    
+<body> 
+  <p align="center"> WK TRAVEL&TOURS✨🌍</p>
 
 <header>
 
