--- a/index.html
+++ b/index.html
@@ -1,70 +1,52 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
-<meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-
-
-<title>WK TRAVEL&TOURS - YOUR NEXT ADVENTURE 🌍✨</title>
-<link rel="stylesheet" href="styles.css">
-<style>
-  
-   </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Destinations | Explore Botswana</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-    
-<body> 
-  <p align="center"> WK TRAVEL&TOURS✨🌍</p>
+<body>
 
-<header>
+    <header>
+        <h1>Top Destinations in Botswana</h1>
+    </header>
 
-<h1> WK TRAVEL&TOURS✨🌍</h1> 
+    <nav>
+        <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+         <li><a href="travel-tips.html">Travel Tips</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-  <nav class="navbar">
-    <ul>
-       <li><a href ="index.htm">Home</a></li>     
-       <li><a href=" about.html">About</a></li>
-       <li><a href=" contact&feedback.html">Contact&Feedback</a></li>
-       <li><a href="tours&packages.html">Tours&Packages</a></li>
-       <li><a href="travel tips.html">Travel Tips</a></li>
-    </ul>
-    
-  </nav>
+    <main>
+        <h2>Explore Beautiful Destinations</h2>
+        <div class="destination">
+            <img src="images/okavango.jpg" alt="Okavango Delta">
+            <h3>Okavango Delta</h3>
+            <p>One of the world's largest inland deltas, famous for its wildlife and boat safaris.</p>
+        </div>
 
-  <main>
-    <h3> This is the Home page</h3>
-    <p> YOUR DESTINATION AWAITS YOU</p>
-  </main>
-  
-</header>
+        <div class="destination">
+            <img src="images/chobe.jpg" alt="Chobe National Park">
+            <h3>Chobe National Park</h3>
+            <p>Home to the largest population of elephants in Africa.</p>
+        </div>
+    </main>
 
+    <footer>
+        <p>&copy; 2025 Explore Botswana. All rights reserved.</p>
+    </footer>
 
-<main>
-
-<p>Exhaustive guide to exploring the breathtaking landscapes, wildlife, and culture of Botswana🫵🏾.
-Our mission is to give you the best travel experiences so you can experience the beauty, culture of our area.
-Our featured destinations include The Makgadikgadi Pans,Tshodilo Hills, Chobe National park......... </p>
- 
-
-<p>Here's a picture showing the beautiful landscapes of Botswana:</p>
-<img src="https://www.originaltravel.co.uk/travel-blog/showphoto/4115/0">
-
-
-<p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
-
-</main>
-
-
-<footer>
-
-<p>&copy; 2025 WANGU KUDZIILA</p>
-
-</footer>
+    <script src="script.js"></script>
 
 </body>
-
 </html>
+
+
+
+
+
+
