--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
             <p>Home to the largest population of elephants in Africa.</p>
         </div>
     </main>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Two Columns Layout</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <div class="left-column">
+      <h2>Left Column</h2>
+      <p>This is the left column content.</p>
+    </div>
+    <div class="right-column">
+      <h2>Right Column</h2>
+      <p>This is the right column content.</p>
+    </div>
+  </div>
+</body>
+</html>
+
 
     <footer>
         <p>&copy; 2025 Explore Botswana. All rights reserved.</p>
