--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <body>
   <div class="container">
     <div class="left-column">
-      <h2>Left Column</h2>
-      <p>This is the left column content.</p>
+      <h2>embark on your jorney with us</h2>
+      <p>we lok forward to seeing you..</p>
     </div>
     <div class="right-column">
       <h2>Right Column</h2>
